Discard coverage data for abstract methods (#100)