@@ -1,46 +1,38 @@
 package nl.ramsolutions.sw.magik.jacoco.sw5lib;
 
+import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
 /** Smallworld/Magik duplicate method finder. */
-public class Sw5LibDuplicateMethodFinder {
-
-  private static final String ANONYMOUS_PROC = "@__anonymous_proc__";
+final class Sw5LibDuplicateMethodFinder {
 
   private Sw5LibDuplicateMethodFinder() {}
 
   /**
-   * Find duplicate method definitions and the files the methods are defined in.
+   * Find duplicate method definitions.
    *
-   * @param fileMethodNameMap Mapping of file to method names.
+   * @param methodDefinitions Collection of {@link MethodDefinition}s to check.
    * @return List of duplicate method definition strings.
    */
-  public static List<String> findDuplicateMethodDefinitions(
-      final Map<String, List<String>> fileMethodNameMap) {
-    return fileMethodNameMap.entrySet().stream()
-        .flatMap(
-            entry -> {
-              final String fileName = entry.getKey();
-              final List<String> methodNames =
-                  entry.getValue().stream()
-                      .filter(name -> !name.endsWith(ANONYMOUS_PROC))
-                      .collect(Collectors.toList());
-              return methodNames.stream().map(methodName -> Map.entry(methodName, fileName));
-            })
+  public static Map<String, List<MethodDefinition>> findDuplicateMethodDefinitions(
+      final Collection<MethodDefinition> methodDefinitions) {
+    return methodDefinitions.stream()
+        .map(methodDefinition -> Map.entry(methodDefinition.getMagikName(), methodDefinition))
         .collect(
             Collectors.groupingBy(
                 Map.Entry::getKey, Collectors.mapping(Map.Entry::getValue, Collectors.toList())))
         .entrySet()
         .stream()
         .filter(entry -> entry.getValue().size() > 1)
-        .map(
-            entry -> {
-              final String methodName = entry.getKey();
-              final String files = entry.getValue().stream().collect(Collectors.joining(", "));
-              return String.format("%s defined in files: %s", methodName, files);
-            })
-        .collect(Collectors.toList());
+        .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+    // .map(
+    //     entry -> {
+    //       final String methodName = entry.getKey();
+    //       final String files = entry.getValue().stream().collect(Collectors.joining(", "));
+    //       return String.format("%s defined in files: %s", methodName, files);
+    //     })
+    // .toList();
   }
 }
